<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:padding="16dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Loading Spinner -->
        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <!-- Event Judul -->
        <TextView
            android:id="@+id/judul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/judul"
            android:textStyle="bold"
            android:textSize="25sp"
            android:paddingTop="8dp" />

        <!-- Event By -->
        <TextView
            android:id="@+id/by"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:text="@string/by"
            android:textSize="16sp"
            android:paddingBottom="16dp" />

        <!-- Event Logo -->

        <!-- Event Summary -->
        <ImageView
            android:id="@+id/imageLogo"
            android:layout_width="match_parent"
            android:layout_height="275dp"
            android:contentDescription="@string/todo"
            android:layerType="software"
            android:scaleType="centerCrop"
            android:src="@drawable/heartify" />

        <TextView
            android:id="@+id/summary"
            android:justificationMode="inter_word"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/isi"
            android:textSize="17sp"
            android:paddingTop="8dp"
            android:paddingBottom="6dp" />

        <!-- Event Description -->
        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:text="@string/penutup"
            android:textAlignment="viewStart"
            android:lineSpacingExtra="2dp"
            android:textSize="17sp"
            android:paddingTop="8dp" />

    </LinearLayout>
</ScrollView>
